RESOLVED FIXED193307
REGRESSION(239737) iOS quicklook tests should not dereference null
https://bugs.webkit.org/show_bug.cgi?id=193307
Summary REGRESSION(239737) iOS quicklook tests should not dereference null
Alex Christensen
Reported 2019-01-09 16:10:57 PST
REGRESSION(239737) iOS quicklook tests should not dereference null
Attachments
Patch (7.03 KB, patch)
2019-01-09 16:11 PST, Alex Christensen
bfulgham: review+
Alex Christensen
Comment 1 2019-01-09 16:11:53 PST
Brent Fulgham
Comment 2 2019-01-09 16:18:37 PST
Comment on attachment 358759 [details] Patch Looks like some null checks. Yup. r=me
Alex Christensen
Comment 3 2019-01-09 16:19:40 PST
Radar WebKit Bug Importer
Comment 4 2019-01-09 16:22:47 PST
Note You need to log in before you can comment on or make changes to this bug.