REGRESSION(239737) iOS quicklook tests should not dereference null https://bugs.webkit.org/show_bug.cgi?id=193307

Reviewed by Brent Fulgham.

The quicklook tests rely on ResourceHandle on iOS for some reason.
This is a problem we'll fix later, but for now keep them working by not crashing.

* platform/network/mac/ResourceHandleMac.mm:
(WebCore::ResourceHandle::createNSURLConnection):
(WebCore::ResourceHandle::start):
(WebCore::ResourceHandle::willSendRequest):
(WebCore::ResourceHandle::tryHandlePasswordBasedAuthentication):
(WebCore::ResourceHandle::receivedCredential):



Canonical link: https://commits.webkit.org/207796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239791 268f45cc-cd09-0410-ab3c-d52691b4dbfc